--- a/package.json
+++ b/package.json
@@ -51,19 +51,23 @@
     "font-awesome": "4.7.0",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
+    "jquery": "3.6.0",
     "leaflet": "1.2.0",
     "nebular-icons": "1.1.0",
     "ng2-ckeditor": "^1.2.9",
     "ng2-completer": "9.0.1",
     "ng2-smart-table": "^1.6.0",
+    "ngx-carousel": "^1.3.5",
     "ngx-echarts": "^4.2.2",
     "ngx-permissions": "8.1.1",
+    "ngx-slick-carousel": "0.5.1",
     "node-sass": "^4.12.0",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
     "roboto-fontface": "0.8.0",
     "rxjs": "6.6.2",
     "rxjs-compat": "6.3.0",
+    "slick-carousel": "1.8.1",
     "socicon": "3.0.5",
     "style-loader": "^1.1.3",
     "tinymce": "4.5.7",
